# cuda-study

./: .gitignore  CMakeLists.txt  t1.cu
include/: common.h
src/: sumMatrix.cu
